Adding delayed catalog load + probe position csv

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "website/UnityMiniBrainClient/Assets/vbl-core"]
 	path = website/UnityMiniBrainClient/Assets/vbl-core
 	url = https://github.com/VirtualBrainLab/vbl-core
+[submodule "UnityMiniBrainClient/Assets/vbl-core"]
+	path = UnityMiniBrainClient/Assets/vbl-core
+	url = https://github.com/VirtualBrainLab/vbl-core
