Updating scripts with new callbacks

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,4 @@ cache.zip
 UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
 
 **/Assets/AddressableAssets/*
+UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
