--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,5 @@ UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
 
 **/Assets/AddressableAssets/*
 UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
+
+**/UserSettings/*
