WIP: integrating trial viewer, not working yet

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
 UnityMiniBrainClient/UserSettings/Layouts/default-2021.dwlt
 
 **/UserSettings/*
+WebGL
