--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ TrialViewer/pipelines/username.txt
 static/Build/**
 static/TrialViewerBuild/**
 static/StreamingAssets/**
+TrialViewer/pipelines/data/*
