Fixing a bug and adding trial #
TrialViewerLoaded() was firing at the end of LoadData, causing the session to get re-set on each load

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,5 @@ TrialViewer/pipelines/data/*
 static/*Build
 static/data
 TrialViewer/pipelines/final/*
+TrialViewer/Assets/AddressableAssetsData/link.xml
+TrialViewer/Assets/AddressableAssetsData/link.xml.meta
