Minor bug fixes to pipeline files

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,4 @@ static/data
 TrialViewer/pipelines/final/*
 TrialViewer/Assets/AddressableAssetsData/link.xml
 TrialViewer/Assets/AddressableAssetsData/link.xml.meta
+TrialViewer/pipelines/final.zip
