Minor tweaks to fix bugs

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,4 @@ TrialViewer/Assets/AddressableAssetsData/link.xml
 TrialViewer/Assets/AddressableAssetsData/link.xml.meta
 TrialViewer/pipelines/final.zip
 *.pem
+TrialViewer/Assets/AddressableAssetsData/link.xml.meta
