Fixing a bug that caused stimuli to go the wrong direction and to end on the wrong side of the screen

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,5 @@ TrialViewer/Assets/AddressableAssetsData/link.xml.meta
 TrialViewer/pipelines/final.zip
 *.pem
 TrialViewer/Assets/AddressableAssetsData/link.xml.meta
+TrialViewer/UserSettings/Layouts/default-2021.dwlt
+TrialViewer/Assets/AddressableAssetsData/link.xml.meta
