Removing unnecessary callback to update QC view

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,4 @@ TrialViewer/pipelines/final.zip
 TrialViewer/Assets/AddressableAssetsData/link.xml.meta
 TrialViewer/UserSettings/Layouts/default-2021.dwlt
 TrialViewer/Assets/AddressableAssetsData/link.xml.meta
+TrialViewer/UserSettings/Layouts/default-2021.dwlt
